--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Tyler Steffensen
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>GitHub Pages - Excersise 01</title>
+</head>
+<body>
+    <h1>Tyler Steffensen</h1> 
+    <br>
+    <h2>MTM6201 - Section 030</h2>
+    <br>
+    <p>Over the winter break I flew back home to saskatchewan to be with my family over the holidays. When I flew back many of my flights were delayed and I ended up staying in the Toronto airport for new years... FUN!</p>
+</body>
+</html>
