--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Over the winter break I flew back home to saskatchewan to be with my family over the holidays. When I flew back
         many of my flights were delayed and I ended up staying in the Toronto airport for new years... FUN!</p>
     <div>
-        <a href="https://steffensen.github.io/projects-directory/landing-page/">Landing Page</a>
+        <a href="https://steffensen.github.io/landing-page/">Landing Page</a>
     </div>
 </body>
 
