setting up final

--- a/index.html
+++ b/index.html
@@ -9,16 +9,8 @@
 </head>
 
 <body>
-    <h1>Tyler Steffensen</h1>
-    <br>
-    <h2>MTM6201 - Section 030</h2>
-    <br>
-    <p>Over the winter break I flew back home to saskatchewan to be with my family over the holidays. When I flew back
-        many of my flights were delayed and I ended up staying in the Toronto airport for new years... FUN!</p>
-    <div>
-
-        <a href="https://steffensen.github.io/landing-page/">Landing Page</a>
-    </div>
+    <h1>Tyler Steffensen - Final</h1>
+    
 </body>
 
 </html>
