--- a/podium/services.html
+++ b/podium/services.html
@@ -153,7 +153,7 @@
 
             <div class="row my-4">
                 <div class="col-lg-3">
-                    <div class="card">
+                    <div class="card my-2">
                         <div class="card-header">
                             Machining
                         </div>
@@ -170,7 +170,7 @@
                 </div>
 
                 <div class="col-lg-3">
-                    <div class="card">
+                    <div class="card my-2">
                         <div class="card-header">
                             Manufacturing Equipment
                         </div>
@@ -186,7 +186,7 @@
                 </div>
 
                 <div class="col-lg-3">
-                    <div class="card">
+                    <div class="card my-2">
                         <div class="card-header">
                             Value Added
                         </div>
@@ -202,7 +202,7 @@
                 </div>
 
                 <div class="col-lg-3">
-                    <div class="card">
+                    <div class="card my-2">
                         <div class="card-header">
                             Quality
                         </div>
